# research-agent-toolkit

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: literature-monitor.yml  tests.yml
docs/: demo-email.zh-CN.md  email-setup.zh-CN.md  github-actions.zh-CN.md  llm-provider.zh-CN.md  quickstart.md  quickstart.zh-CN.md  roadmap.zh-CN.md  source-verification.zh-CN.md  user-trial-2026-05-02.md
examples/: sample_candidates.json  sample_email_zh.md  sample_report.json
scripts/: push_to_github.sh
src/research_agent_toolkit/: __init__.py  cli.py  config.py  logging_utils.py  schemas.py
src/research_agent_toolkit/delivery/: __init__.py  gmail_api.py  markdown_writer.py  smtp_email.py
src/research_agent_toolkit/llm/: __init__.py  base.py  openai_compatible.py
src/research_agent_toolkit/processing/: __init__.py  deduplicate.py  filters.py  ranker.py
src/research_agent_toolkit/sources/: __init__.py  arxiv.py  crossref.py  europe_pmc.py  github_search.py  huggingface_hub.py  pubmed.py  semantic_scholar.py  utils.py  web_search.py
src/research_agent_toolkit/state/: history.py
src/research_agent_toolkit/verification/: __init__.py  date_checker.py  link_checker.py  title_matcher.py
tests/: test_config.py  test_deduplicate.py  test_email_format.py  test_ranker.py  test_title_matcher.py  test_workflow_dryrun.py
(+5 files in other folders)
